--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,5 +42,13 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-
+input{
+  margin: 5px;
+}
+p{
+  margin-top: 2vh;
+}
+h4{
+  margin: 1vh 0;
+}
 
