--- a/src/app/style-app/style-app.component.scss
+++ b/src/app/style-app/style-app.component.scss
@@ -1,6 +1,6 @@
 .box{
   width: 100%;
-  height: 40vh;
+  height: 55vh;
   background-color: lightgray;
   padding-top: 5vh;
   padding-left: 5vw;
@@ -15,7 +15,6 @@
 }
 .listForm{
   margin-top: 2vh;
-  display: none;
 }
 .inputBox{
   width: 95%;
@@ -24,6 +23,7 @@
   justify-content: space-between;
 }
 .listStyle{
+  margin: 0px;
   width: 55vw;
   height: 25px;
   margin-left: 55px;
@@ -62,7 +62,6 @@
 }
 .tableForm{
   margin-top: 1vh;
-  display: none;
 }
 .marginLeft{
   margin-left: 65px;
